grammar lexer modes, built-in variables, qualifier parameters; indentation block feature, small fixes

--- a/todo.txt
+++ b/todo.txt
@@ -1,16 +1,14 @@
-- lexer szabályok sorrendje
-	- pl. qualifier elfedi az identifier-t
-	      built-on functon elfedi az identifier-t
-- nyelvtanban nem szereplõ karakterekkel nem foglalkozik a parser
-	- pl. áûúõ nem hiba
 - code sample
 	- a példakód használja ki a nyelvi elemeket
 - code folding - mûködjön
-- indentation tab
+- indentation
+	- tab nem okés
+	- kapcsos zárójel if után enter
 - grammar
-	- makró végén eof/new line miatt szintaktikai hiba
-		- lexer mode/úgy mint a kommenteknél
-		- még le nem fedett makrók pl. define
+	- lexer mode színezése nem okés
 	- line continuation character
-- hibajelzés 
+	- lexer módokban csomó minden újradefiniálása
+- hibajelzés
+	- beépített fv nevû változót nem lehet használni
 	- nem lehet valahogy a pozíciót elérni csak a sor helyett?
+- karakterkódolás
